--- a/basic.html
+++ b/basic.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEewVankWkyadDU8hXBcnAIP6I-vFeR9w">
     </script>
-    <script type="text/javascript" src="http://ugrad.cs.jhu.edu/~mmill179/hopHack_spring2015/gMaps_test01/gMap.js">
+    <script type="text/javascript" src="gMap.js">
     </script>
+    
+	<link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-<div id="map-canvas"></div>
+    <div id="map-canvas"></div>
   </body>
 </html>
