--- a/basic.html
+++ b/basic.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <div id="map-canvas"></div>
+  	<form>
+	destination:<br>
+	<input type="text" name="dest"> 
+	<input type="submit" onclick="calcDest()" name="SUBIMT">
+	</form>
   </body>
 </html>
