--- a/basic.html
+++ b/basic.html
@@ -11,10 +11,8 @@
   </head>
   <body>
     <div id="map-canvas"></div>
-  	<form>
-	destination:<br>
-	<input type="text" name="dest"> 
-	<input type="submit" onclick="calcDest()" name="SUBIMT">
-	</form>
+	<!-- destination:<br> -->
+	<input id="dest" type="text" name="dest"> 
+  <button onclick="calcDest()">Submit</button>
   </body>
 </html>
