second text box to and from

--- a/basic.html
+++ b/basic.html
@@ -12,7 +12,9 @@
   <body>
     <div id="map-canvas"></div>
 	<!-- destination:<br> -->
-	<input id="dest" type="text" name="dest"> 
-  <button onclick="calcDest()">Submit</button>
+    <input id="start" type="text" name="dest"> 
+    <button onclick="calcDest()">Start</button>
+    <input id="finish" type="text" name="finish">
+	<button onlick="">Finish</button>
   </body>
 </html>
