functional google maps

--- a/basic.html
+++ b/basic.html
@@ -13,8 +13,8 @@
     <div id="map-canvas"></div>
 	<!-- destination:<br> -->
     <input id="start" type="text" name="dest"> 
-    <button onclick="calcDest()">Start</button>
     <input id="finish" type="text" name="finish">
-	<button onlick="">Finish</button>
+    <button onclick="calcDest()">Go</button>
+
   </body>
 </html>
