--- a/basic.html
+++ b/basic.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="map-canvas"></div>
+	<div id="street-canvas"></div>
 	<!-- destination:<br> -->
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
