--- a/basic.html
+++ b/basic.html
@@ -4,8 +4,8 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEewVankWkyadDU8hXBcnAIP6I-vFeR9w">
     </script>
-    <script type="text/javascript" src="gMap.js">
-    </script>
+    <script type="text/javascript" src="gMap.js"> </script>
+    <script type="text/javascript" src="OculusBridge.min.js"> </script>
     
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </head>
