--- a/basic.html
+++ b/basic.html
@@ -6,7 +6,7 @@
     </script>
     <script type="text/javascript" src="gMap.js"> </script>
     <script type="text/javascript" src="OculusBridge.min.js"> </script>
-    
+   <script type="text/javascript" src="js/OculusRiftEffect.js"></script> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
