--- a/basic.html
+++ b/basic.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEewVankWkyadDU8hXBcnAIP6I-vFeR9w">
-    </script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEewVankWkyadDU8hXBcnAIP6I-vFeR9w"></script>
     <script type="text/javascript" src="gMap.js"> </script>
     <script type="text/javascript" src="OculusBridge.min.js"> </script>
-   <script type="text/javascript" src="http://oculusstreetview.eu.pn/js/OculusRiftEffect.js"></script> 
-	<script type="text/javascript" src="http://oculusstreetview.eu.pn/js/three.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div id="map-canvas"></div>
