double view w/oculus

--- a/basic.html
+++ b/basic.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="map-canvas"></div>
-	<div id="street-canvas"></div>
-	<!-- destination:<br> -->
+    <div id="street-canvas" class="left"></div>
+    <div id="street-canvas" class="right"></div>
+    <div id="map-canvas" class="left"></div>
+    <div id="map-canvas" class="right"></div>
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
     <button onclick="calcDest()">Go</button>
