--- a/basic.html
+++ b/basic.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <div id="street-canvas" class="left"></div>
-    <div id="street-canvas" class="right"></div>
+    <!--<div id="street-canvas" class="right"></div>
     <div id="map-canvas" class="left"></div>
-    <div id="map-canvas" class="right"></div>
+    --><div id="map-canvas" class="right">show map</div>
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
     <button onclick="calcDest()">Go</button>
-
   </body>
 </html>
