--- a/basic.html
+++ b/basic.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="map-canvas"></div>
+
 	<div id="street-canvas"></div>
+  <div id="street-canvas second"></div>
+
 	<!-- destination:<br> -->
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
