--- a/basic.html
+++ b/basic.html
@@ -17,5 +17,7 @@
     <input id="finish" type="text" name="finish">
     <button onclick="calcDest()">Go</button>
 
+    <button onclick="step()">Step Forward</button>
+
   </body>
 </html>
