oculus 3d support added

--- a/basic.html
+++ b/basic.html
@@ -9,9 +9,12 @@
   <body>
     <!--<div id="map-canvas" class="left"></div>
     <div id="map-canvas" class="left"></div>
-    --><div id="map-canvas" class="left"></div>
-    <div id="street-canvas" class="left"></div>
-    <div id="street-canvas" class="right"></div>
+    -->
+    <div id="street">
+    <div id="street-canvas_left" class="left"></div>
+    <div id="street-canvas_right" class="right"></div>
+    </div>
+	<div id="map-canvas" class="left"></div>
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
     <button onclick="calcDest()">Go</button>
