oculus double working, directions updated

--- a/basic.html
+++ b/basic.html
@@ -14,7 +14,8 @@
     <div id="street-canvas_left" class="left"></div>
     <div id="street-canvas_right" class="right"></div>
     </div>
-	<div id="map-canvas" class="left"></div>
+    <div id="map-canvas" class="left"></div>
+    <div id="dir-canvas" class="right"></div>
     <input id="start" type="text" name="dest"> 
     <input id="finish" type="text" name="finish">
     <button onclick="calcDest()">Go</button>
