--- a/basic.html
+++ b/basic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEewVankWkyadDU8hXBcnAIP6I-vFeR9w"></script>
+    <script type="text/javascript" src="google.js"></script>
     <script type="text/javascript" src="gMap.js"> </script>
     <script type="text/javascript" src="OculusBridge.min.js"> </script>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -16,8 +16,8 @@
     </div>
     <div id="map-canvas" class="left"></div>
     <div id="dir-canvas" class="right"></div>
-    <input id="start" type="text" name="dest" value="28829 Eagleton St Agoura Hills CA"> 
-    <input id="finish" type="text" name="finish" value="1372 Corte De Primavera Thousand Oaks CA">
+<!--     <input id="start" type="text" name="dest" value="28829 Eagleton St Agoura Hills CA"> 
+    <input id="finish" type="text" name="finish" value="1372 Corte De Primavera Thousand Oaks CA"> -->
     <button onclick="calcDest()">Go</button>
 
     <button onclick="step()">Step Forward</button>
