--- a/home.html
+++ b/home.html
@@ -126,10 +126,46 @@
 }
 </style>
 
+<script type="text/javascript" src="annyang.min.js"> </script>
+
+
 <script>
     function go() {
         window.location.href = 'basic.html' + "#" + document.getElementById('start').value + "#" + document.getElementById('finish').value;
     }
+
+if (annyang) {
+  // Let's define our first command. First the text we expect, and then the function it should call
+  var start = function(start){
+    console.log("Start: " + start)
+    document.getElementById('start').value = start;
+
+  }
+
+  var end = function(end){
+    console.log("End: " + end)
+    document.getElementById('finish').value = end;
+
+  }
+
+  var go = function() {
+    // document.getElementById('submit').click();
+    annyang.abort();
+    console.log("here");
+    window.location.href = 'basic.html' + "#" + document.getElementById('start').value + "#" + document.getElementById('finish').value;
+
+  }
+
+
+var commands = {
+    'start at *place': start,
+    'go to *end': end,
+    'take me away': go
+  };
+
+  annyang.addCommands(commands);
+  annyang.start();
+}
 
 </script>
 </head>
