--- a/basic.html
+++ b/basic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Take Me Away...</title>
     <script type="text/javascript" src="google.js"></script>
     <script type="text/javascript" src="gMap.js"> </script>
     <script type="text/javascript" src="OculusBridge.min.js"> </script>
