--- a/basic.html
+++ b/basic.html
@@ -17,8 +17,8 @@
     </div>
     <div id="map-canvas" class="left"></div>
     <div id="dir-canvas" class="right"></div>
-<!--     <input id="start" type="text" name="dest" value="28829 Eagleton St Agoura Hills CA"> 
-    <input id="finish" type="text" name="finish" value="1372 Corte De Primavera Thousand Oaks CA"> -->
+    <input id="start" type="text" name="dest" value="28829 Eagleton St Agoura Hills CA"> 
+    <input id="finish" type="text" name="finish" value="1372 Corte De Primavera Thousand Oaks CA">
     <button onclick="calcDest()">Go</button>
 
     <button onclick="step()">Step Forward</button>
